# aee-capstone

./: .dockerignore  .gitignore  Makefile  README.md  STUDENT_SETUP_GUIDE.md  compose.prod.yml  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml
config/: faqs.yaml  models.yaml  param.yaml
copilot/api/: manifest.yml
copilot/environments/addons/: redis.yml
copilot/environments/dev/: manifest.yml
copilot/voice/: manifest.yml
copilot/worker/: manifest.yml
docker/api/: Dockerfile
docker/voice/: Dockerfile
docker/web/: Dockerfile  nginx.conf
docs/: AWS_From_Zero_Account_and_IAM_Setup.docx  Nawaloka_Cloud_Services_Cost_and_Decisions.docx
notebooks/: 01_routing_memory_and_tools.ipynb  02_multi_agent_langgraph.ipynb  03_voice_pipeline_fundamentals.ipynb  04_voice_agent_livekit.ipynb
scripts/: check_patient_uniques.py  ingest_to_qdrant.py  init_chat_sessions.py  init_supabase.py  rebuild_cag_cache.py  seed_crm_unified.py  seed_procedures.py  test_langgraph.py  test_mcp_agent.py  test_supabase.py
scripts/aws/: build_push_images.sh  deploy_redis.sh  push_secrets.sh  wire_redis_url.sh
scripts/aws/cfn/: redis-cluster.yml
sql/: 01_specialties.sql  02_locations.sql  03_doctors.sql  04_patients.sql  05_bookings.sql  06_procedures.sql  07_chat_sessions.sql  supabase_schema.sql
src/agents/: __init__.py  decision_graph.py  guardrail.py  orchestrator.py  router.py  state.py
src/agents/prompts/: __init__.py  agent_prompts.py
src/agents/tools/: __init__.py  crm_tool.py  rag_tool.py  web_search_tool.py
src/api/: deps.py  event_labels.py  main.py  middleware.py  run.py  schemas.py  utils.py
src/api/routers/: __init__.py  chat.py  chat_sessions.py  health.py  patients.py  voice.py
src/api/routers/tools/: __init__.py  cag.py  crawl.py  crm.py  memory.py  rag.py  web.py
src/infrastructure/: __init__.py  config.py  log.py  models.py  observability.py  utils.py
src/infrastructure/db/: __init__.py  crm_init.py  crm_models.py  qdrant_client.py  sql_client.py  supabase_client.py  supabase_schema.py
src/infrastructure/llm/: __init__.py  embeddings.py  llm_provider.py
src/mcp_servers/: __init__.py  cag_server.py  crawler_server.py  crm_server.py  mcp_config.py  memory_server.py  rag_server.py  web_server.py
src/memory/: __init__.py  episodic_store.py  lt_store.py  memory_ops.py  policies.py  procedural_store.py  prompts.py  schemas.py  st_store.py
src/services/: __init__.py
src/services/chat_service/: __init__.py  cag_cache.py  cag_service.py  crag_service.py  rag_service.py  rag_templates.py
src/services/crm_service/: __init__.py  crm_db_client.py  llm_data_generator.py
src/services/ingest_service/: __init__.py  chunkers.py  pipeline.py  web_crawler.py
src/voice/: __init__.py  adapter.py  agent.py  config.py  pipeline.py  run.py  stt.py  tts.py
src/workers/: __init__.py  enqueue.py  tasks.py
tests/: __init__.py  test_memory_core.py  test_memory_policies.py
ui/: .env.example  .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.js  vite.config.ts
ui/src/: App.tsx  index.css  types.ts
ui/src/api/: client.ts
ui/src/components/: ChainOfThought.tsx  ChatWindow.tsx  InputBox.tsx  MessageBubble.tsx  PatientGate.tsx  ProfileSheet.tsx  ResponseMeta.tsx  Sidebar.tsx  StatusBar.tsx  ThinkingStages.tsx  ToolExplorer.tsx  VoiceBubble.tsx  VoiceRoom.tsx
ui/src/hooks/: useChat.ts  useChatStream.ts  useHealth.ts  usePatient.ts  useSessions.ts
