[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "multi-agentic-voice-ai"
version = "1.0.0"
description = "Multi-Agentic Voice AI with Multi-Memory Architecture"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Zuu Crew" }]

dependencies = [
    # ── Core LLM & Embedding Services ────────────────────────────
    "openai>=1.12.0",
    "anthropic>=0.18.0",
    "cohere>=4.47",

    # ── LangChain Ecosystem ──────────────────────────────────────
    "langchain>=0.1.0",
    "langchain-core>=0.1.0",
    "langchain-community>=0.0.20",
    "langchain-openai>=0.0.5",
    "langchain-text-splitters>=0.2.0",
    "langgraph>=0.0.30",

    # ── Web Crawling & Content Extraction ────────────────────────
    "playwright>=1.40.0",
    "beautifulsoup4>=4.12.0",
    "markdownify>=0.11.6",
    "lxml>=5.1.0",
    "nest-asyncio>=1.5.0",

    # ── Vector Store & Semantic Search ───────────────────────────
    "supabase>=2.3.0",
    "psycopg2-binary>=2.9.9",
    "pgvector>=0.2.4",
    "qdrant-client>=1.9.0",
    "sentence-transformers>=2.3.1",

    # ── Text Processing & Tokenization ───────────────────────────
    "tiktoken>=0.5.2",
    "nltk>=3.8.1",
    "spacy>=3.7.0",

    # ── Configuration & Environment ──────────────────────────────
    "python-dotenv>=1.0.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "pyyaml>=6.0",
    "typing-extensions>=4.9.0",

    # ── Utilities ────────────────────────────────────────────────
    "tqdm>=4.66.0",
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "matplotlib>=3.7.0",
    "scipy>=1.11.0",
    "requests>=2.31.0",
    "aiohttp>=3.9.0",

    # ── Memory & Database ─────────────────────────────────────────
    "sqlalchemy>=2.0.0",
    "pytz>=2024.1",
    "python-dateutil>=2.8.0",

    # ── Web Search ─────────────────────────────────────────────────
    "tavily-python>=0.3.0",

    # ── Observability & Logging ──────────────────────────────────
    "langfuse>=2.0.0",
    "loguru>=0.7.0",

    # ── API server (FastAPI) ─────────────────────────────────────
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "sse-starlette>=1.8.0",
    "starlette>=0.36.0",

    # ── MCP (Model Context Protocol) ─────────────────────────────
    "mcp>=1.27.0",
    "fastmcp>=3.0.0",
    "langchain-mcp-adapters>=0.2.2",

    # ── Scheduling (reminders) ───────────────────────────────────
    "apscheduler>=3.10.0",

    # ── Voice Pipeline (Week 14: LiveKit + Deepgram + ElevenLabs)
    "livekit>=1.0.0",
    "livekit-agents>=1.5.0",
    "livekit-plugins-deepgram>=1.5.0",
    "livekit-plugins-elevenlabs>=1.5.0",
    "livekit-plugins-silero>=1.5.0",
    "deepgram-sdk>=6.0.0",
    "elevenlabs>=2.0.0",
    "sounddevice>=0.5.0",
    "onnxruntime>=1.17.0",
    "torch>=2.0.0",

    # ── Notebook & document utilities ───────────────────────────
    "ipython>=8.0.0",
    "ipywidgets>=8.1.1",
    "python-docx>=1.0.0",
]

[project.optional-dependencies]
jupyter = [
    "jupyter>=1.0.0",
    "ipykernel>=6.29.0",
    "notebook>=7.0.0",
]
dev = [
    "black>=24.1.0",
    "flake8>=7.0.0",
    "mypy>=1.8.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

# ── Tool Configuration ──────────────────────────────────────────────

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"

[tool.flake8]
max-line-length = 100
extend-ignore = ["E203", "W503"]
